[package]
name = "poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = { version = "0.1.2" }
turnstile = { path = "../program", features = ["no-entrypoint"] }

solana-program = "1.8.2"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { version = "*", features = ["no-entrypoint"] }

owo-colors = "3.1.0"

[lib]
